Commenter des optimisations qui posent problème sur certaines plateformes (grmbl)

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,5 +1,5 @@
-CFLAGS_COMMON=-march=native -mtune=native
-CFLAGS_OPTIM=-O3 -mfpmath=sse -ffast-math -funroll-loops -fomit-frame-pointer -funsafe-math-optimizations -fgcse-lm -fgcse-sm -fsched-spec-load $(CFLAGS_COMMON)
+CFLAGS_COMMON=#-march=native -mtune=native -mfpmath=sse
+CFLAGS_OPTIM=-O3 -ffast-math -funroll-loops -fomit-frame-pointer -funsafe-math-optimizations -fgcse-lm -fgcse-sm -fsched-spec-load $(CFLAGS_COMMON)
 CFLAGS_DEBUG=-g $(CFLAGS_COMMON)
 simu: nvstks_05_05_31.F90
 	gfortran nvstks_05_05_31.F90 -o simu $(CFLAGS_OPTIM)
