--- a/rapport/Makefile
+++ b/rapport/Makefile
@@ -1,6 +1,6 @@
 all: figures rapport.pdf
-rapport.pdf: rapport.tex
-	pdflatex rapport.tex; pdflatex rapport.tex
+rapport.pdf: rapport.tex rapport.bib
+	pdflatex rapport.tex; bibtex rapport ; pdflatex rapport.tex ; pdflatex rapport.tex
 figures:
 	make -C figs
 clean:
@@ -10,4 +10,6 @@ clean:
 	rm -f rapport.lot
 	rm -f rapport.out
 	rm -f rapport.toc
+	rm -f rapport.bbl
+	rm -f rapport.blg
 	rm -f rapport.pdf
