--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,6 @@
 set show-all-if-ambiguous on
 set completion-ignore-case on
+set skip-completed-text on #make completion in the middle of a word work properly
 
 #C-w kill-region
 "\C-w":kill-region
