--- a/.config/pizauth.conf
+++ b/.config/pizauth.conf
@@ -1,7 +1,7 @@
 // https://stuff.sigvaldason.com/email.html
 // sudo apt install rustup, rustup default stable, git clone git@github.com:ltratt/pizauth.git, cd pizauth, make, sudo make install, pizauth show officesmtp
 // sudo apt install libsasl2-modules-kdexoauth2
-account "officesmtp" {
+account "orsay" {
     auth_uri = "https://login.microsoftonline.com/common/oauth2/v2.0/authorize";
     token_uri = "https://login.microsoftonline.com/common/oauth2/v2.0/token";
     client_id = "08162f7c-0fd2-4200-a84a-f25a4db0b584"; // Fill in with your Client ID
@@ -11,7 +11,13 @@ account "officesmtp" {
       "https://outlook.office365.com/SMTP.Send",
       "offline_access"
     ];
-    // You don't have to specify login_hint, but it does make authentication a
-    // little easier.
     auth_uri_fields = { "login_hint": "antoine.levitt@universite-paris-saclay.fr" };
+}
+account "gmail" {
+    auth_uri = "https://accounts.google.com/o/oauth2/auth";
+    auth_uri_fields = {"login_hint": "antoine.levitt@gmail.com"};
+    token_uri = "https://oauth2.googleapis.com/token";
+    client_id = "310522042174-bkv4t3n73kc4bm2u2rlhfomfl64ou4oi.apps.googleusercontent.com";
+    client_secret = "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";
+    scopes = ["https://mail.google.com/"];
 }
