--- a/.msmtprc
+++ b/.msmtprc
@@ -1,11 +1,23 @@
-# An Exchange server
+defaults
+port 587
+tls on
+tls_trust_file /etc/ssl/certs/ca-certificates.crt
+logfile ~/.msmtp.log
+
 account      orsay
 auth         xoauth2
 host         smtp.office365.com
 protocol     smtp
-port         587
-tls          on
 tls_starttls on
 from         antoine.levitt@universite-paris-saclay.fr
 user         antoine.levitt@universite-paris-saclay.fr
-passwordeval pizauth show officesmtp
+passwordeval pizauth show orsay
+
+account      gmail
+auth         xoauth2
+host         smtp.gmail.com
+protocol     smtp
+tls_starttls on
+from         antoine.levitt@gmail.com
+user         antoine.levitt@gmail.com
+passwordeval pizauth show gmail
