--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -3,6 +3,7 @@
 # https://stuff.sigvaldason.com/email.html
 # sudo apt install rustup, rustup default stable, git clone git@github.com:ltratt/pizauth.git, cd pizauth, make, sudo make install, pizauth show officesmtp
 # sudo apt install libsasl2-modules-kdexoauth2
+# sudo apt install msmtp
 # install isync 1.5.1 with libsasl2-dev, libdb5.3-dev
 
 # ACCOUNT INFORMATION
