--- a/.config/pizauth.conf
+++ b/.config/pizauth.conf
@@ -18,3 +18,4 @@ account "gmail" {
     client_secret = "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";
     scopes = ["https://mail.google.com/"];
 }
+token_event_cmd = "pizauth dump > ~/.pizauth_secrets";
