--- a/.config/pizauth.conf
+++ b/.config/pizauth.conf
@@ -19,3 +19,4 @@ account "gmail" {
     scopes = ["https://mail.google.com/"];
 }
 token_event_cmd = "pizauth dump > ~/.pizauth_secrets";
+startup_cmd = "pizauth restore < ~/.pizauth_secrets";
